<resources>
    <string name="app_name">Mapbox</string>
    <string name="title_activity_map">Mapbox</string>
    <string name="title_activity_navigation">Mapbox</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>

    <string name="new_location">New location</string>
    <string name="user_location_permission_explanation">Allow location permission</string>
    <string name="user_location_permission_not_granted">Permission denied</string>
    <string name="str_start_navigation">Start navigation</string>
    <string name="str_navigate">Navigate</string>
    <string name="str_go">GO</string>
    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_queue">Queue</string>
    <string name="title_account">Account</string>
    <string name="title_more">More</string>
    <string name="title_activity_base">BaseActivity</string>


    <!--icons-->
    <string name="icon_taxi">&#xe90a;</string>
    <string name="icon_my_location">&#xe916;</string>
    <string name="icon_left_arrow">&#xe923;</string>
    <string name="icon_pin">&#xe928;</string>
    <string name="icon_profile">&#xe929;</string>
    <string name="icon_queue">&#xee907;</string>
    <string name="icon_close">&#xe915;</string>
    <string name="icon_home">&#xe921;</string>
    <string name="icon_left_arrow_nobar">&#xe922;</string>
    <string name="icon_open_menu">&#xe97c;</string>
    <string name="icon_compass">&#xe97f;</string>
    <string name="icon_eye">&#xe9ce;</string>
    <string name="icon_conversation">&#xe94a;</string>
    <string name="icon_logout">&#xe924;</string>
    <string name="icon_checked">&#xe913;</string>
    <string name="icon_up_arrow">&#xe903;</string>
    <string name="icon_right_arrow">&#xe952;</string>
    <string name="icon_telephone">&#xe958;</string>

    <!--icon end-->

    <string name="str_you_are_offline">You\'re offline</string>
    <string name="str_driving_preference">Driving Preferences</string>
    <string name="open_to_all_trips">Open to all trips</string>
    <string name="str_save">SAVE</string>
    <string name="str_reset">RESET</string>
    <string name="str_taxi">Taxi</string>
    <string name="str_food">Food</string>
    <string name="str_both">Both</string>
    <string name="str_finding_trips">Finding trips</string>
    <string name="str_decline">DECLINE</string>
    <string name="str_taxi_cap">TAXI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_was_your_rides">How was your rides?</string>
    <string name="rate_rider">Rate Rider</string>
    <string name="trip_panner">Trip planner</string>


</resources>