<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rnd.mapbox.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_queue"
        android:name="com.rnd.mapbox.ui.queue.QueueFragment"
        android:label="@string/title_queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rnd.mapbox.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />

</navigation>