<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvStartTaxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:minHeight="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".95">

            <TextView
                android:id="@+id/completeTaxiOpenMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/icon_open_menu"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/completePickupDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="2 min"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="@android:color/holo_red_dark"
                        app:cardCornerRadius="12dp">

                        <TextView
                            android:id="@+id/ivCompleteUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:shadowColor="@color/white"
                            android:shadowRadius="0"
                            android:text="@string/icon_profile"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tvDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="2.5 km"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorGray" />


                <LinearLayout
                    android:id="@+id/completeCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/ivCompleteCall"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/icon_telephone"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/colorCallButton"
                        app:iconPadding="2dp" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="Joe"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardCompleteTaxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:minHeight="50dp"
                app:cardBackgroundColor="@color/colorRed"
                app:cardCornerRadius="0dp">

                <TextView
                    android:id="@+id/ivCompleteArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/icon_right_arrow"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvCompleteTaxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="COMPLETE TAXI"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>